# music-webapp

./: Caddyfile  Dockerfile  README.md  db-setup  db-setup-new  docker-compose.yml  init.sql  pyproject.toml
src/: __main__.py  main.py  myenums.py  schemas.py  sql_commands.py  utils.py
src/static/: audio.js  login.css  messages.js  styles.css  vote.js
src/templates/: base.html  chat-component.html  chat-component2.html  chat.html  explore.html  home.html  index.html  library.html  login-component.html  login.html  new.html  popup-player-component.html  settings.html  signup-component.html  song-list.html  stat-component.html  upload.html
