[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Johannes <joh@nnes.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
Flask-SQLAlchemy = "^3.1.1"
psycopg2 = "^2.9.9"
SQLAlchemy = "^2.0.28"
python-dotenv = "^1.0.1"
bleach = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
